Corrected video display on small screens

--- a/client/src/app/components/explorers/explorer/open/open.component.css
+++ b/client/src/app/components/explorers/explorer/open/open.component.css
@@ -8,16 +8,19 @@
     flex-direction: column;
 }
 
-.main-content img {
+.main-content img,
+.main-content video {
     max-width: 70vw;
     max-height: 60vh;
 }
 
-.main-content mat-form-field, .main-content object {
+.main-content mat-form-field,
+.main-content object {
     width: 70vw;
 }
 
-object, textarea {
+object,
+textarea {
     height: 60vh;
 }
 
